--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,35 @@
 body {
-   font-family: 12px;
+    font-family: 12px;
+}
+
+.header {
+    font-family: 'Helvetica';
+    text-align: center;
+    background-color: rgba(50, 50, 255, .5);
+    padding-top: 10px;
+    color: white;
+    padding-bottom: 0px;
+
+}
+
+.header p {
+    padding-top: 10px;
+}
+
+.header h3 {
+    font-size: 45px;
+    text-shadow: -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+
+}
+
+.chem {
+    padding-left: 50px;
+}
+
+#pers_info {
+    font-size: 10px;
+    padding: 0px 0px 10px 0px;
 }
