--- a/css/index.css
+++ b/css/index.css
@@ -6,30 +6,42 @@ body {
     font-family: 'Helvetica';
     text-align: center;
     background-color: rgba(50, 50, 255, .5);
-    padding-top: 10px;
     color: white;
     padding-bottom: 0px;
+    height: 120px;
+    margin-bottom: 0px;
 
 }
 
 .header p {
-    padding-top: 10px;
+    padding: 0px;
+    margin: 10px 0px 4px 0px;
+    font-size: 14px;
+
 }
 
 .header h3 {
     font-size: 45px;
+    padding-top: 15px;
+
     text-shadow: -1px -1px 0 #000,
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;
+    margin: 0px;
 
 }
 
 .chem {
     padding-left: 50px;
+    padding-top: 15px;
+    margin: 10px;
+    border: solid black 1px;
+    width: auto;
 }
 
 #pers_info {
-    font-size: 10px;
-    padding: 0px 0px 10px 0px;
+    font-size: 11px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px;
 }
