--- a/css/index.css
+++ b/css/index.css
@@ -7,9 +7,9 @@ body {
     text-align: center;
     background-color: rgba(50, 50, 255, .5);
     color: white;
-    padding-bottom: 0px;
+    padding: 0px;
     height: 120px;
-    margin-bottom: 0px;
+    margin: 0px;
 
 }
 
