--- a/site.css
+++ b/site.css
@@ -7,18 +7,31 @@ h1 {
 }
 
 .main {
-	width: 50%;
-	border: solid black 1px;
+	width: 20%;
+	padding: 15px;
+	text-align: center;
+	float: right;
+	margin-right: 100px;
+	margin-top: 40px;
+}
+
+.headshot {
+	border: solid black 2px;
+	border-radius: 10px;
+}
+
+.main p {
+	margin: 15px;
 }
 
 .spring-18 {
-	width: 40%;
+	width: 25%;
 	border: solid black 1px;
 	display: inline-block;
 }
 
 .fall-18 {
-	width: 40%;
+	width: 25%;
 	border: solid black 1px;
 }
 
