--- a/site.css
+++ b/site.css
@@ -7,7 +7,7 @@ h1 {
 }
 
 .main {
-	width: 20%;
+	width: 40%;
 	padding: 15px;
 	text-align: center;
 	float: right;
@@ -20,8 +20,28 @@ h1 {
 	border-radius: 10px;
 }
 
+.publications {
+	width: 100%;
+}
+
+.publications h1 {
+	margin-top: 35px;
+	font-size: 22px;
+	text-align: left;
+}
+
+publications ul li {
+	text-align: left;
+}
+
+publications ul li p {
+	display: inline;	
+	padding-left: 10px;
+}
+
 .main p {
 	margin: 15px;
+	text-align: left;
 }
 
 .spring-18 {
@@ -43,7 +63,4 @@ h1 {
 .course p {
 	padding-left: 15px;
 }
-.publications {
-	width: 50%;
-	border: solid black 1px;
-}
+
