--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+.blog {
+    margin: auto;
+    width: 50%;
+    padding: 40px;
+}
+
+/*
 body {
 	font-family: Roboto;
 	background-color: lightsteelblue;
@@ -99,4 +106,4 @@ a:hover {
 	padding-left: 15px;
 	padding-bottom: 0px;
 }
-
+*/
