--- a/templates/index.html
+++ b/templates/index.html
@@ -12,19 +12,19 @@
 
       My name is Brent Westbrook, and I am currently a PhD student in
       chemistry at the University of Mississippi. I am exclusively a
-      computational chemist, so I spend at least as much of my time with
-      computers as with chemistry. As a result, I occasionally have
-      interesting things to share about computers here or on my upcoming
-      Youtube channel. Hopefully it will forthcoming for less time than the
-      James Webb Space Telescope.
+      computational chemist, so I spend at least as much of my time
+      with computers as with chemistry. As a result, I occasionally
+      have interesting things to share about computers here or on my
+      upcoming Youtube channel. Hopefully it will forthcoming for less
+      time than the James Webb Space Telescope.
 
     </p>
 
     <p>
 
-      I was also a general chemistry Supplemental Instruction leader for
-      four semesters and wrote many worksheets during that time, so I also
-      have them accessible here.
+      I was also a general chemistry Supplemental Instruction leader
+      for four semesters and wrote many worksheets during that time,
+      so I also have them accessible here.
 
     </p>
 
