--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
       computational chemist, so I spend at least as much of my time
       with computers as with chemistry. As a result, I occasionally
       have interesting things to share about computers here or on my
-      upcoming Youtube channel. Hopefully it will forthcoming for less
-      time than the James Webb Space Telescope.
+      upcoming Youtube channel. Hopefully it will be forthcoming for
+      less time than the James Webb Space Telescope.
 
     </p>
 
@@ -40,7 +40,9 @@
     <h4><a class="sub" href="/sp19">Spring 2019 - CHEM 2327 (Quant.)</a></h4>
 
     <h3 id="misc" class="entry">Miscellaneous Resources</h3>
-    <h4><a class="sub" href="/misc/qff.pdf">Quartic Force Field Presentation</a></h4>
+    <h4><a class="sub" href="/misc/qff.pdf">Quartic Force Field Presentation (PDF)</a></h4>
+    <h4><a class="sub" href="/misc/gauss.pdf">Gaussian 09 Tutorial (PDF)</a></h4>
+    <h4><a class="sub" href="https://www.youtube.com/watch?v=Niog2lK-WkQ">Gaussian 09 Tutorial (YouTube)</a></h4>
 
   </body>
 </html>
