--- a/templates/head.html
+++ b/templates/head.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="/css/site.css">
   <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brent Westbrook</title>
 </head>
 {{end}}
