redirect to https, add github link and astrocheminar

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,8 @@
     <h4><a class="sub" href="/sp19">Spring 2019 - CHEM 2327 (Quant.)</a></h4>
 
     <h3 id="misc" class="entry">Miscellaneous Resources</h3>
+    <h4><a class="sub" href="/git">Github</a></h4>
+    <h4><a class="sub" href="https://youtu.be/kGejhJMqYLA?t=137">AstroCheminar Presentation (YouTube)</a></h4>
     <h4><a class="sub" href="/misc/qff.pdf">Quartic Force Field Presentation (PDF)</a></h4>
     <h4><a class="sub" href="/misc/gauss.pdf">Gaussian 09 Tutorial (PDF)</a></h4>
     <h4><a class="sub" href="https://www.youtube.com/watch?v=Niog2lK-WkQ">Gaussian 09 Tutorial (YouTube)</a></h4>
