--- a/css/site.css
+++ b/css/site.css
@@ -12,7 +12,7 @@ html {
 body {
     padding-top: 20px; 
     padding-bottom: 20px; 
-    max-width: 800px;
+    max-width: 820;
     margin-left: auto;
     margin-right: auto;
     border: 1px solid rgba(255,255, 255, 1);
@@ -146,4 +146,16 @@ a:active {
     margin-left: 50px;
     margin-right: 50px;
     border: 10px;
+}
+
+.MathJax_Display {
+    color: white;
+}
+
+.MJX-TEX {
+    color: white;
+}
+
+.figure {
+    text-align: center;
 }
