--- a/templates/blogPage.html
+++ b/templates/blogPage.html
@@ -2,9 +2,12 @@
 <html>
   {{template "header"}}
   <body>
+    <main>
     <h1>Blogs</h1>
     {{template "navbar"}}
     {{template "blogs" .}}
+    </main>
+    {{template "footer"}}
   </body>
 </html>
 {{end}}
