--- a/templates/index.html
+++ b/templates/index.html
@@ -1,51 +1,54 @@
 {{define "indexPage"}}
 <html>
-{{template "header"}}
+  {{template "header"}}
   <body>
-    <h1>Brent Westbrook</h1>
-    {{template "navbar"}}
-    <h2>bwestbro.com</h2>
-    
-    <h3 id="welcome">Welcome!</h3>
+    <main>
+      <h1>Brent Westbrook</h1>
+      {{template "navbar"}}
+      <h2>bwestbro.com</h2>
 
-    <p>
+      <h3 id="welcome">Welcome!</h3>
 
-      My name is Brent Westbrook, and I am currently a PhD student in
-      chemistry at the University of Mississippi. I am exclusively a
-      computational chemist, so I spend at least as much of my time
-      with computers as with chemistry. As a result, I occasionally
-      have interesting things to share about computers here or on my
-      upcoming Youtube channel. Hopefully it will be forthcoming for
-      less time than the James Webb Space Telescope.
+      <p>
 
-    </p>
+	My name is Brent Westbrook, and I am currently a PhD student in
+	chemistry at the University of Mississippi. I am exclusively a
+	computational chemist, so I spend at least as much of my time
+	with computers as with chemistry. As a result, I occasionally
+	have interesting things to share about computers here or on my
+	upcoming Youtube channel. Hopefully it will be forthcoming for
+	less time than the James Webb Space Telescope.
 
-    <p>
+      </p>
 
-      I was also a general chemistry Supplemental Instruction leader
-      for four semesters and wrote many worksheets during that time,
-      so I also have them accessible here.
+      <p>
 
-    </p>
+	I was also a general chemistry Supplemental Instruction leader
+	for four semesters and wrote many worksheets during that time,
+	so I also have them accessible here.
 
-    <h3><a class="entry" href="/pub">Recent Publications</a></h3>
-    {{template "pubs" .Pubs}}
+      </p>
 
-    <h3><a class="entry" href="/blog">Recent Blog Posts</a></h3>
-    {{template "blogs" .Blog}}
+      <h3><a class="entry" href="/pub">Recent Publications</a></h3>
+      {{template "pubs" .Pubs}}
 
-    <h3 id="sheets" class="entry">Old Worksheets</h3>
-    <h4><a class="sub" href="/sp18">Spring 2018 - CHEM 2320 (Gen. Chem. 2)</a></h4>
-    <h4><a class="sub" href="/fa18">Fall 2018 - CHEM 2320 (Gen. Chem. 2)</a></h4>
-    <h4><a class="sub" href="/sp19">Spring 2019 - CHEM 2327 (Quant.)</a></h4>
+      <h3><a class="entry" href="/blog">Recent Blog Posts</a></h3>
+      {{template "blogs" .Blog}}
 
-    <h3 id="misc" class="entry">Miscellaneous Resources</h3>
-    <h4><a class="sub" href="/git">Github</a></h4>
-    <h4><a class="sub" href="https://youtu.be/kGejhJMqYLA?t=137">AstroCheminar Presentation (YouTube)</a></h4>
-    <h4><a class="sub" href="/misc/qff.pdf">Quartic Force Field Presentation (PDF)</a></h4>
-    <h4><a class="sub" href="/misc/gauss.pdf">Gaussian 09 Tutorial (PDF)</a></h4>
-    <h4><a class="sub" href="https://www.youtube.com/watch?v=Niog2lK-WkQ">Gaussian 09 Tutorial (YouTube)</a></h4>
+      <h3 id="sheets" class="entry">Old Worksheets</h3>
+      <h4><a class="sub" href="/sp18">Spring 2018 - CHEM 2320 (Gen. Chem. 2)</a></h4>
+      <h4><a class="sub" href="/fa18">Fall 2018 - CHEM 2320 (Gen. Chem. 2)</a></h4>
+      <h4><a class="sub" href="/sp19">Spring 2019 - CHEM 2327 (Quant.)</a></h4>
 
+      <h3 id="misc" class="entry">Miscellaneous Resources</h3>
+      <h4><a class="sub" href="/git">Github</a></h4>
+      <h4><a class="sub" href="https://youtu.be/kGejhJMqYLA?t=137">AstroCheminar Presentation (YouTube)</a></h4>
+      <h4><a class="sub" href="/misc/qff.pdf">Quartic Force Field Presentation (PDF)</a></h4>
+      <h4><a class="sub" href="/misc/gauss.pdf">Gaussian 09 Tutorial (PDF)</a></h4>
+      <h4><a class="sub" href="https://www.youtube.com/watch?v=Niog2lK-WkQ">Gaussian 09 Tutorial (YouTube)</a></h4>
+
+    </main>
+    {{template "footer"}}
   </body>
 </html>
 {{end}}
