--- a/templates/worksheets.html
+++ b/templates/worksheets.html
@@ -2,17 +2,20 @@
 <html>
   {{template "header"}}
   <body>
-    <h1>Worksheets</h1>
-    {{template "navbar"}}
-    {{range $i, $e := .Items}}
-    <p>
-      <a class=sub href={{.Filename}}>
-	{{if ne .Type "Exam"}}
-	Worksheet {{$i}} -
-	{{end}}
-	{{.Title}}</a>
-    </p>
-    {{end}}
+    <main>
+      <h1>Worksheets</h1>
+      {{template "navbar"}}
+      {{range $i, $e := .Items}}
+      <p>
+	<a class=sub href={{.Filename}}>
+	  {{if ne .Type "Exam"}}
+	  Worksheet {{$i}} -
+	  {{end}}
+	  {{.Title}}</a>
+      </p>
+      {{end}}
+    </main>
+    {{template "footer"}}
   </body>
 </html>
 {{end}}
