--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,15 @@
 
       <p>
 
-	My name is Brent Westbrook, and I am currently a PhD student in
-	chemistry at the University of Mississippi. I am exclusively a
-	computational chemist, so I spend at least as much of my time
-	with computers as with chemistry. As a result, I occasionally
-	have interesting things to share about computers here or on my
-	upcoming Youtube channel. Hopefully it will be forthcoming for
-	less time than the James Webb Space Telescope.
+	My name is Brent Westbrook, and I am currently a PhD candidate
+	in chemistry at the University of Mississippi. I am
+	exclusively a computational chemist, so I spend at least as
+	much of my time with computers as with chemistry. As a result,
+	I occasionally have interesting things to share about
+	computers here or on
+	<a href="https://www.youtube.com/channel/UC0PBefyEK7qQ7HN325nUamQ">my
+	upcoming Youtube channel</a>. Hopefully it will be forthcoming
+	for less time than the James Webb Space Telescope.
 
       </p>
 
