--- a/templates/pubPage.html
+++ b/templates/pubPage.html
@@ -6,6 +6,12 @@
       <h1>Publications</h1>
       {{template "navbar"}}
       {{template "pubs" .}}
+      <p>
+	Key:
+	<span class="undergrad">Undergraduate Author</span>,
+	<span class="highschool">High School Author</span>
+
+      </p>
     </main>
   {{template "footer"}}
   </body>
