add pubs to RSS feed and add dates to pubs
* also add DEBUG variable in Makefile
* and update intro

--- a/templates/foot.html
+++ b/templates/foot.html
@@ -3,5 +3,7 @@
   Email: brent at thisdomain
   <br>
   <a href=/rss>RSS</a>
+  <a href="/git">Github</a>
+  <a href="https://www.youtube.com/channel/UC0PBefyEK7qQ7HN325nUamQ">YouTube</a>
 </footer>
 {{end}}
