--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,9 @@
 	I occasionally have interesting things to share about
 	computers here or on
 	<a href="https://www.youtube.com/channel/UC0PBefyEK7qQ7HN325nUamQ">my
-	upcoming Youtube channel</a>. Hopefully it will be forthcoming
-	for less time than the James Webb Space Telescope.
+	<s>upcoming</s> Youtube channel</a>. Fortunately it was
+	forthcoming for less time than the James Webb Space Telescope,
+	but they did launch around the same time.
 
       </p>
 
@@ -43,7 +44,6 @@
       <h4><a class="sub" href="/sp19">Spring 2019 - CHEM 2327 (Quant.)</a></h4>
 
       <h3 id="misc" class="entry">Miscellaneous Resources</h3>
-      <h4><a class="sub" href="/git">Github</a></h4>
       <h4><a class="sub" href="https://youtu.be/kGejhJMqYLA?t=137">AstroCheminar Presentation (YouTube)</a></h4>
       <h4><a class="sub" href="/misc/qff.pdf">Quartic Force Field Presentation (PDF)</a></h4>
       <h4><a class="sub" href="/misc/gauss.pdf">Gaussian 09 Tutorial (PDF)</a></h4>
