--- a/templates/rss.html
+++ b/templates/rss.html
@@ -3,8 +3,8 @@
 <rss version="2.0">
 <channel>
  <title>bwestbro.com</title>
- <description>Brent R. Westbrook's recent publications, blogs, and
- videos</description>
+ <description>Brent R. Westbrook's recent publications and
+ blogs</description>
  <link>https://bwestbro.com</link>
  <ttl>1800</ttl>
 
