add optimization presentation

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,8 @@
       <h4><a class="sub" href="/misc/qff.pdf">Quartic Force Field Presentation (PDF)</a></h4>
       <h4><a class="sub" href="/misc/gauss.pdf">Gaussian 09 Tutorial (PDF)</a></h4>
       <h4><a class="sub" href="https://www.youtube.com/watch?v=Niog2lK-WkQ">Gaussian 09 Tutorial (YouTube)</a></h4>
+      <h4><a class="sub" href="/misc/optimization.pdf">Linear and Non-Linear
+      Optimization (PDF)</a></h4>
 
     </main>
     {{template "footer"}}
