--- a/templates/index.html
+++ b/templates/index.html
@@ -11,16 +11,17 @@
 
       <p>
 
-	My name is Brent Westbrook, and I am currently a PhD candidate
-	in chemistry at the University of Mississippi. I am
-	exclusively a computational chemist, so I spend at least as
-	much of my time with computers as with chemistry. As a result,
-	I occasionally have interesting things to share about
-	computers here or on
+	My name is Brent Westbrook, and I am currently a Staff Scientist at the
+	Open Force Field Initiative working on the parameterization of force
+	fields. Previously, I did my PhD in chemistry at the University of
+	Mississippi with <a href="http://berry.bwestbro.com">Ryan
+	Fortenberry</a>, where I worked on automating anharmonic vibrational
+	spectra calculations and reparameterizing semi-empirical methods. I am
+	exclusively a computational chemist, so I spend more of my time with
+	computers than with chemistry. As a result, I occasionally have
+	interesting things to share about computers here or on
 	<a href="https://www.youtube.com/channel/UC0PBefyEK7qQ7HN325nUamQ">my
-	<s>upcoming</s> Youtube channel</a>. Fortunately it was
-	forthcoming for less time than the James Webb Space Telescope,
-	but they did launch around the same time.
+	YouTube channel</a>.
 
       </p>
 
