--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,9 @@
 {{define "navbar"}}
 <ul>
-  <li><a class=nav href="/">Home</a></li>
-  <li><a class=nav href="/pub">Publications</a></li>
-  <li><a class=nav href="/blog">Blogs</a></li>
-  <li><a class=nav href="/#sheets">Worksheets</a></li>
-  <li><a class=nav href="/#misc">Misc</a></li>
+  <li class=nav><a class=nav href="/">Home</a></li>
+  <li class=nav><a class=nav href="/pub">Publications</a></li>
+  <li class=nav><a class=nav href="/blog">Blogs</a></li>
+  <li class=nav><a class=nav href="/#sheets">Worksheets</a></li>
+  <li class=nav><a class=nav href="/#misc">Misc</a></li>
 </ul>
 {{end}}
