--- a/css/site.css
+++ b/css/site.css
@@ -119,6 +119,20 @@ p {
     font-size: 16px;
 }
 
+table {
+    padding-left: 40px;
+    padding-right: 40px;
+    color: #FFFFFF;
+    font-size: 16px;
+	border-style: solid;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+th {
+  border-bottom: 1px solid rgb(160 160 160);
+}
+
 ol:not(aside > ol) {
     padding-left: 80px;
 }
